@@ -390,9 +390,16 @@ class FacetFieldProcessorByHashDV extends FacetFieldProcessor {
               values.advance(segDoc);
             }
             if (segDoc == values.docID()) {
-              for (int i = 0; i < values.docValueCount(); i++) {
-                collectValFirstPhase(segDoc, values.nextValue());
+              long l = values.nextValue(); // This document must have at least one value
+              collectValFirstPhase(segDoc, l);
+              for (int i = 1; i < values.docValueCount(); i++) {
+                long lnew = values.nextValue();
+                if (lnew != l) { // Skip the value if it's equal to the last one, we don't want to double-count it
+                  collectValFirstPhase(segDoc, lnew);
+                }
+                l = lnew;
               }
+
             }
           }
         });
