@@ -115,6 +115,10 @@ Bug Fixes
 
 * SOLR-11348: Fix the DIH database example (James Dyer)
 
+* SOLR-11363: JSON Facet API: repeated values in a numeric points field with docValues enabled
+  were double counted. (Hossman, yonik)
+
+
 Optimizations
 ----------------------
 
